--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
         "prettier": "^3.4.2",
         "prettier-plugin-organize-imports": "^4.1.0",
         "prettier-plugin-tailwindcss": "^0.6.11",
+        "tailwindcss-animate": "^1.0.7",
+        "tw-animate-css": "^1.4.0",
         "typescript-eslint": "^8.23.0"
     },
     "dependencies": {
@@ -36,9 +38,10 @@
         "concurrently": "^9.0.1",
         "globals": "^15.14.0",
         "laravel-vite-plugin": "^2.0",
+        "lucide-react": "^0.562.0",
         "react": "^19.2.0",
         "react-dom": "^19.2.0",
-        "tailwind-merge": "^3.0.1",
+        "tailwind-merge": "^3.4.0",
         "tailwindcss": "^4.0.0",
         "typescript": "^5.7.2",
         "vite": "^7.0.4"
